syntax = "proto3";

package user;
import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

